Suggestion Stock Working

--- a/Trading_Assistant/manifest.json
+++ b/Trading_Assistant/manifest.json
@@ -1,9 +1,16 @@
 {
   "manifest_version": 3,
   "name": "TradingView Scraper",
-  "version": "1.0",
-  "description": "Scrape stock data from TradingView watchlist/screener.",
-  "permissions": ["activeTab", "scripting"],
+  "version": "1.3",
+  "permissions": [
+    "activeTab",
+    "scripting"
+  ],
+  "host_permissions": [
+    "http://127.0.0.1:5000/*",
+    "https://*.tradingview.com/*"
+  ],
+ 
   "action": {
     "default_popup": "popup.html"
   },
